--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
 PHP的dns.c功能不全
 PHP-5.5的password功能
+PHP的mysqlnd
 libmcrypt库
-二进制的程序和库文件需要strip
+二进制的程序和库文件需要strip，清理不需要安装上去的文件。
+fpm运行phpmyadmin崩溃，child 14633 exited on signal 11
 
 
